changed ports to8 8181 and 8008

--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -1,8 +1,8 @@
 server {
-  listen 80;
+  listen 8181;
 
-  location /images {
-    proxy_pass http://images-service:8000/image;
+  location /image {
+    proxy_pass http://image-service:8181/image;
   }
 
 }
