--- a/image-service/requirements.txt
+++ b/image-service/requirements.txt
@@ -1,5 +1,11 @@
 asyncpg==0.20.1
-fastapi==0.48.0
 SQLAlchemy==1.3.13
-uvicorn==0.11.2
 httpx==0.11.1
+click==7.1.2
+fastapi==0.61.1
+h11==0.11.0
+Pillow==8.0.1
+pydantic==1.7.1
+starlette==0.13.6
+tk==0.1.0
+uvicorn==0.12.2
