--- a/image-service/requirements.txt
+++ b/image-service/requirements.txt
@@ -1,10 +1,11 @@
-asyncpg==0.20.1
-SQLAlchemy==1.3.13
-httpx==0.11.1
+asgiref==3.3.1
 click==7.1.2
-fastapi==0.61.1
+Django==3.1.3
+fastapi==0.61.2
 h11==0.11.0
-pydantic==1.7.1
+Pillow==8.0.1
+pydantic==1.7.2
+pytz==2020.4
+sqlparse==0.4.1
 starlette==0.13.6
-tk==0.1.0
-uvicorn==0.12.2
+uvicorn==0.12.3
