--- a/image-service/Dockerfile
+++ b/image-service/Dockerfile
@@ -6,9 +6,13 @@ COPY ./requirements.txt /app/requirements.txt
 
 RUN apt-get update \
     && apt-get install gcc -y \
-    && apt-get clean
+    && apt-get clean \
+    && apt-get install tk
 
 RUN pip install -r /app/requirements.txt \
     && rm -rf /root/.cache/pip
+
+RUN pip3 install Pillow
+
 
 COPY . /app/
