--- a/image-service/Dockerfile
+++ b/image-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim
+FROM python:3.8
 
 WORKDIR /app
 
@@ -8,7 +8,13 @@ RUN apt-get update \
     && apt-get install gcc -y \
     && apt-get clean
 
+RUN apt-get update && apt-get install tk-dev && rm -r /var/lib/apt/lists/*
+
 RUN pip install -r /app/requirements.txt \
     && rm -rf /root/.cache/pip
+
+
+
+ENV PYTHONPATH "${PYTHONPATH}:/code"
 
 COPY . /app/
