--- a/image-service/Dockerfile
+++ b/image-service/Dockerfile
@@ -10,7 +10,8 @@ RUN apt-get update \
 
 RUN apt-get update && apt-get install tk-dev && rm -r /var/lib/apt/lists/*
 
-RUN pip install -r /app/requirements.txt \
+RUN pip install -r /app/requirements.txt
+
 RUN pip3 install -r /app/requirements.txt \
     && rm -rf /root/.cache/pip
 
